AX: Dynamic changes to subtrees of AccessibilityNodeObjects can cause missing or stale content https://bugs.webkit.org/show_bug.cgi?id=245212 rdar://problem/99956378

Reviewed by Andres Gonzalez.

AccessibilityNodeObject is missing a few key method implementations that can cause incorrect AX
tree construction (either missing or stale content) after dynamic page updates. These methods are:
  - updateChildrenIfNecessary
  - setNeedsToUpdateChildren
  - needsToUpdateChildren
  - setNeedsToUpdateSubtree

In this patch, we move these method implementations from AccessibilityRenderObject to AccessibilityNodeObject,
ensuring both types of objects share this logic.

* LayoutTests/accessibility/display-contents-dynamically-added-children-expected.txt: Added.
* LayoutTests/accessibility/display-contents-dynamically-added-children.html: Added.
* LayoutTests/platform/glib/TestExpectations: Skip new test.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/accessibility/display-contents-dynamically-added-children-expected.txt: Added.
* LayoutTests/platform/mac-wk1/TestExpectations: Skip new test.
* LayoutTests/platform/win/TestExpectations: Skip new test.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::updateChildrenIfNecessary):
* Source/WebCore/accessibility/AccessibilityNodeObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::updateChildrenIfNecessary):
Moved to AccessibilityNodeObject.
* Source/WebCore/accessibility/AccessibilityRenderObject.h:

Canonical link: https://commits.webkit.org/254534@main